2007-05-16  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* MaskedTextBox.cs: Small fix for Text that fixes a broken test.

2007-05-15  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: Make IsInputCharInternal to allow controls to
	override it and still match MS API.
	* TextBoxBase.cs: Override IsInputCharInternal and always
	return true.
	[Fixes bug #81616]

2007-05-15  Jackson Harper  <jackson@ximian.com>

	* TextBox.cs: Disable some of the menu options when using a
	readonly textbox.

2007-05-15  Jackson Harper  <jackson@ximian.com>

	* TextBox.cs:
	* TextBoxBase.cs:
	* RichTextBox.cs: Some new 2.0 methods

2007-05-15  Gert Driesen  <drieseng@users.sourceforge.net>

	* FileDialog.cs: On 1.0 profile, do not support multidotted 
	extensions.

2007-05-14  Jackson Harper  <jackson@ximian.com>

	* TextBoxBase.cs: Implement some of the new 2.0 methods.
	* RichTextBox.cs: We need to override these methods on 2.0.
	* MaskedTextBox.cs: These are implemented now
	* TextControl.cs: This was off by one.

2007-05-14  Jackson Harper  <jackson@ximian.com>

	* TextControl.cs: Because the line endings are including in the
	text, we don't need to add them in anymore.

2007-05-11  Everaldo Canuto  <everaldo@simios.org>

	* ToolBar.cs: Fix autosize and get it working only after hadle is created,
	also prevent redraw in set_autosize if handle is not created. Fixes #81523.

2007-05-11  Everaldo Canuto  <everaldo@simios.org>

	* ToolBar.cs: Adjust size to default size when button theres no text and
	image, it fixes remaining issues from #81524.

2007-05-11  Everaldo Canuto  <everaldo@simios.org>

	* ToolBar.cs: 
	- When not flat call redraw to recalculate sizes on creare handle to match
	win32 behavior.
	- Revert 77220 because it causes some regressions in toobar
	button.

2007-05-11  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* MaskedTextBox.cs: Update the base text whenever the text changes. MTB
	  now actually enters a usable state.
